# hello_world

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/apriltag_ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/bno055_ros_bridge/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/column/: .catkin
devel/.private/convert_tf/: .catkin
devel/.private/depthimage_to_laserscan/: .catkin  setup.sh
devel/.private/dock_planner/: .catkin
devel/.private/docker/: .catkin  setup.sh
devel/.private/drivers_package/: .catkin  .rosinstall  local_setup.sh
devel/.private/husky_base/: .catkin  (+2 more)
hex_file/: Bno055_13Jul.ino.hex
hex_file/magnetometer/: magnetometer.ino
launch/: imu_viz.launch
logs/my_change/: build.check.003.log.stderr  build.check.004.log.stderr  build.check.005.log.stderr  build.check.006.log.stderr
logs/path_follower/: build.make.000.log.stderr
logs/path_planner/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/robo_waiter/: build.check.003.log.stderr
scripts/: imu_viz.py
src/: bno055_ros_bridge.cpp
src/bno055_ros_bridge/: imu_viz.rviz
src/convert_tf/: CMakeLists.txt  package.xml
src/dock_planner/: CMakeLists.txt  dock_planner_plugin.xml
src/docker/: CMakeLists.txt  docker.rviz
src/drivers_package/: CMakeLists.txt  Joystick Operation Manual  Readme.md
src/joy_waypoints/: CMakeLists.txt
src/my_change/: CMakeLists.txt
src/my_pcl_tutorial/: CMakeLists.txt  package.xml
src/new_robot_description/: CMakeLists.txt  urdf.rviz
src/path_follower/: CMakeLists.txt  path_follower_plugin.xml
src/path_follower/config/: delete.txt  hjk.txt  hjkk.txt  new.txt  oct14.txt  points.txt  points.yaml  test2.txt  test3.txt  test4_init_set.txt  test5.txt
src/path_follower/include/: path_follower.h
src/path_follower/launch/: path_follow.launch  path_record.launch
src/path_follower/msg/: PointList.msg  PoseList.msg
src/path_follower/scripts/: path_loader.py  path_recorder.py  recorder.py
src/path_follower/src/: path_follower.cpp
src/path_follower/srv/: GoalLoad.srv  Nearest.srv  PointLoad.srv
src/path_planner/: CMakeLists.txt  fog.yaml  package.xml  path_planner_plugin.xml
src/path_planner/config/: new.txt  new.yaml  oct14.yaml  oct14new.yaml  param.yaml  param_o.yaml  path1.txt  test1.yaml  testing.yaml
src/path_planner/include/: orientation_filler.h  path_planner.h
src/path_planner/launch/: loop.launch  path_finder.launch  path_manager.launch  path_manager.launch.save  point_recorder.launch
src/path_planner/launch/unused/: name.launch  path.launch  path_planner.launch
src/path_planner/person_detection/: Person.py
src/path_planner/scripts/: multiple_milestone_goals.py  new.py  path.yaml  path_finder_node.py  path_manager.py  point_recorder.py  points.yaml  test.py
src/path_planner/scripts/unused/: goal_planner_path.py  name_goal.py  path.yaml  path_finder.py  path_finder_new.py  path_manager_edit.py  path_planner_node.py
src/path_planner/src/: orientation_filler.cpp  path_planner.cpp
src/path_planner/srv/: Goal.srv  PathFinder.srv
src/patrol_planner/: CMakeLists.txt  patrol_planner_plugin.xml
src/patrol_planner/config/: 29_jan_coord.txt  29_jan_ms.txt  autosave_coord.txt  autosave_ms.txt  autosave_ts.txt  edt_coord.txt  edt_ms.txt  jan_28_coord.txt  jan_28_ms.txt  json_test_coord.txt  json_test_ms.txt  re_ms.txt  thu_ts.txt  wo.txt
src/patrol_planner/include/: patrol_planner.h
src/patrol_planner/msg/: Tabled.msg
src/patrol_planner/scripts/: coord_list.txt  gps_xy_convertor.py  json_test.txt  obstacle_sim.py  path_player_only.py  path_recorder.py  path_recorder_rw.py  repeat_goal.py  robo_waiter_goal.py  table_recorder.py
src/patrol_planner/src/: patrol_planner.cpp
src/patrol_planner/srv/: GPSGoal.srv  GetPlan.srv  PathLoad.srv  Tl_gl.srv
src/patrol_robot/: CMakeLists.txt  package.xml
src/patrol_v3/: CMakeLists.txt
src/roadmap_global_planner_msgs/: CMakeLists.txt  package.xml
src/robo_waiter/: CMakeLists.txt
src/robot_base/: CMakeLists.txt  config.rviz
src/robot_base_control/: CMakeLists.txt  package.xml
src/robot_base_description/: CMakeLists.txt  urdf.rviz
src/robot_base_gazebo/: CMakeLists.txt
src/robot_base_navigation/: CMakeLists.txt  gmapping.rviz  navigation.rviz  param.yaml  patrol_test.rviz  robo_waiter.rviz  test.rviz
src/robot_base_servo/: CMakeLists.txt
src/ros_marvelmind_package/: CMakeLists.txt
src/shelf/: model.config  model.sdf
src/tag_robo/: CMakeLists.txt
src/web_robo/: CMakeLists.txt  package.xml
(+1821 files in other folders)
